--- a/products.html
+++ b/products.html
@@ -114,18 +114,28 @@
     html,body{margin:0;padding:0}
     body{font-family:'Noto Sans Thai',system-ui,sans-serif;color:var(--ink);background:var(--bg);line-height:1.6;-webkit-font-smoothing:antialiased}
 
-    /* ===== HEADER ===== */
+    /* ===== HEADER (Fixed + glass on scroll) ===== */
     .site-header{
-      position:absolute; inset:0 auto auto 0; right:0; z-index:1400;
-      background:linear-gradient(180deg, rgba(4,10,22,.66), rgba(4,10,22,0));
+      position:fixed; top:0; left:0; right:0; z-index:1400;
+      background:transparent;
       border-bottom:1px solid rgba(255,255,255,.12);
-      -webkit-backdrop-filter: blur(4px); backdrop-filter: blur(4px);
+      transition: background .2s ease, border-color .2s ease, box-shadow .2s ease, backdrop-filter .2s ease;
+      -webkit-backdrop-filter:none; backdrop-filter:none;
+    }
+    .site-header.scrolled{
+      background:rgba(15,23,42,.70);
+      border-bottom-color:rgba(255,255,255,.12);
+      -webkit-backdrop-filter:saturate(140%) blur(10px);
+      backdrop-filter:saturate(140%) blur(10px);
+      box-shadow:0 8px 26px rgba(2,8,20,.18);
     }
     .header-inner{max-width:var(--container); margin:0 auto; min-height:var(--header-h);
-      display:flex; align-items:center; justify-content:space-between; padding:10px 16px;}
+      display:flex; align-items:center; justify-content:space-between; padding:10px 16px; gap:12px;}
     .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
     .brand-logo{width:44px;height:44px;border-radius:10px;flex:0 0 44px;background:#dfe9e3 var(--logo-url) center/cover no-repeat; box-shadow:0 2px 9px rgba(2,8,20,.14)}
     .brand-name{font-weight:800; color:#fff; font-size:1.04rem; letter-spacing:.2px}
+
+    .header-right{display:flex; align-items:center; gap:10px}
     .primary-nav{display:flex; align-items:center; gap:10px}
     .menu{list-style:none; display:flex; gap:6px; margin:0; padding:0}
     .menu a{display:inline-block; padding:10px 12px; border-radius:12px; color:#fff; text-decoration:none; font-weight:700; letter-spacing:.2px}
@@ -136,18 +146,31 @@
     .nav-toggle .bar::before,.nav-toggle .bar::after{ content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px }
     .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
 
+    /* Language switcher (in header) */
+    .lang-switch{
+      display:flex; gap:6px; padding:4px; border:1px solid rgba(226,232,240,.9); border-radius:999px;
+      background:#ffffffcc; backdrop-filter: blur(8px); box-shadow:0 10px 26px rgba(2,8,20,.12);
+    }
+    .site-header.scrolled .lang-switch{ background:#ffffffdd }
+    .lang-btn{appearance:none;border:0;background:transparent;cursor:pointer;padding:6px 10px;border-radius:999px;font-weight:800;display:flex;align-items:center;gap:6px;color:#0f172a;letter-spacing:.1px}
+    .lang-btn[aria-pressed="true"]{ background: var(--brand-2); color:#fff }
+    .flag{ width:18px; height:14px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
+
     @media (max-width:920px){
       .menu{
         position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 10px);
         background:#0f172acc; -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px);
         border:1px solid rgba(255,255,255,.16); border-radius:16px;
         transform:translateY(-12px); opacity:0; pointer-events:none;
-        display:grid; gap:6px; padding:12px; transition:.2s ease;
+        display:grid; gap:6px; padding:12px; transition:.2s ease; z-index:1400;
       }
       .menu li a{ display:block; padding:12px 14px; border-radius:12px }
       .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
       .nav-toggle{ display:inline-flex }
     }
+    .menu-scrim{ position:fixed; inset:0; background:rgba(2,8,20,.28); z-index:1300; display:none }
+    .menu-scrim:not([hidden]){ display:block }
+    body.no-scroll{ position:fixed; width:100%; }
 
     /* ===== HERO ===== */
     .hero{
@@ -167,19 +190,9 @@
     .btn{appearance:none;border:1px solid var(--accent);background:var(--accent);color:#fff;padding:12px 16px;border-radius:12px;font-weight:800;text-decoration:none;box-shadow:var(--shadow-1)}
     .btn:hover{opacity:.92}
     .btn.ghost{background:transparent;border-color:#fff;color:#fff}
-
     .dots{position:absolute; inset:auto 0 18px 0; z-index:2; display:flex; gap:8px; justify-content:center}
     .dot{width:9px; height:9px; border-radius:50%; background:rgba(255,255,255,.5); border:1px solid rgba(0,0,0,.2)}
     .dot[aria-current="true"]{background:#fff}
-
-    /* FAB ภาษา */
-    .lang-fab{
-      position:absolute; right:18px; bottom:18px; z-index:3; display:flex; gap:6px; padding:4px 4px;
-      border:1px solid rgba(226,232,240,.9); border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px); box-shadow:0 10px 26px rgba(2,8,20,.12);
-    }
-    .lang-fab .lang-btn{appearance:none;border:0;background:transparent;cursor:pointer;padding:6px 10px;border-radius:999px;font-weight:800;display:flex;align-items:center;gap:6px;color:#0f172a;letter-spacing:.1px}
-    .lang-fab .lang-btn[aria-pressed="true"]{ background: var(--brand-2); color:#fff }
-    .lang-fab .flag{ width:18px; height:14px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
 
     /* ===== Sub-hero ===== */
     .subhero{background:#fff; border-radius:0 0 var(--radius-lg) var(--radius-lg); box-shadow:0 10px 30px rgba(2,8,20,.06); margin-top:-14px}
@@ -188,7 +201,7 @@
     .subhero p{margin:4px 0 0; color:var(--muted)}
 
     /* ===== Toolbar ===== */
-    .toolbar{position:sticky; top:0; z-index:20; background:#fff; border-bottom:1px solid #e2e8f0; box-shadow:0 6px 18px rgba(2,8,20,.05)}
+    .toolbar{position:sticky; top:var(--header-h); z-index:20; background:#fff; border-bottom:1px solid #e2e8f0; box-shadow:0 6px 18px rgba(2,8,20,.05)}
     .toolbar-inner{max-width:var(--container); margin:0 auto; padding:12px 18px; display:flex; gap:10px; align-items:center; flex-wrap:wrap}
     .input, select{border:1px solid #dbe1ea; background:#fff; padding:11px 12px; border-radius:12px; min-width:220px; box-shadow:var(--shadow-1)}
     #q{min-width:260px}
@@ -262,26 +275,41 @@
 </head>
 <body>
 
-  <!-- ===== HEADER ===== -->
-  <header class="site-header" role="banner" id="siteHeader">
+  <!-- ===== HEADER (fixed + language inside) ===== -->
+  <header class="site-header" role="banner" id="siteHeader" aria-label="Site header">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="Baume Chemical">
         <span class="brand-logo" aria-hidden="true"></span>
         <span class="brand-name">Baume Chemical</span>
       </a>
-      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-        <span class="bar" aria-hidden="true"></span>
-      </button>
-      <nav class="primary-nav" aria-label="Primary">
-        <ul class="menu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="about-us.html" class="nav-link">About us</a></li>
-          <li><a href="products.html" class="nav-link" aria-current="page">Products</a></li>
-          <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
-        </ul>
-      </nav>
+
+      <div class="header-right">
+        <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
+          <ul class="menu">
+            <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="about-us.html" class="nav-link">About us</a></li>
+            <li><a href="products.html" class="nav-link" aria-current="page">Products</a></li>
+            <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
+          </ul>
+        </nav>
+
+        <!-- Language switcher -->
+        <div class="lang-switch" role="group" aria-label="Language switcher">
+          <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
+            <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
+          </button>
+          <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
+            <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
+          </button>
+        </div>
+
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
+          <span class="bar" aria-hidden="true"></span>
+        </button>
+      </div>
     </div>
   </header>
+  <div class="menu-scrim" hidden></div>
 
   <!-- ===== HERO ===== -->
   <section class="hero" aria-label="ภาพรวมผลิตภัณฑ์">
@@ -299,16 +327,7 @@
       </div>
     </div>
 
-    <!-- Language FAB -->
-    <div class="lang-fab" role="group" aria-label="Language switcher">
-      <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
-        <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
-      </button>
-      <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
-        <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
-      </button>
-    </div>
-
+    <!-- (ย้ายปุ่มภาษาไปบนเฮดเดอร์แล้ว) -->
     <div class="dots" aria-label="สไลด์" role="tablist"></div>
   </section>
 
@@ -473,7 +492,7 @@ const PRODUCTS = [
            en:["stripper","deplate","paint remover","coating remover"] },
     img:"https://img2.pic.in.th/pic/thumbnail-4.jpg",
     href:"products/strippers/index.html",
-    mail:"mailto:contact@baumechemical.com.com?subject=ขอใบเสนอราคา: น้ำยาลอกต่างๆ",
+    mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยาลอกต่างๆ",
     tds:"https://www.baumechemical.com/docs/tds/selective-strippers.pdf",
     specs:{ph:"—", temp:"—", current:"—"}
   },
@@ -622,36 +641,24 @@ function addSkeleton(n=PAGE_SIZE){
 function loadMore(initial=false){
   if(loading) return;
   loading = true;
-
-  // จำนวนสเกเลตันที่แสดง
   const remain = Math.max(0, viewList.length - page*PAGE_SIZE);
   addSkeleton(initial ? PAGE_SIZE : Math.min(PAGE_SIZE, remain));
-
   clearTimeout(loadTimer);
   loadTimer = setTimeout(()=>{
     const start = page*PAGE_SIZE;
     const end   = Math.min(start + PAGE_SIZE, viewList.length);
     const q     = state.q.trim();
-
     const html = viewList.slice(start, end).map(p=>cardHTML(p, q)).join('');
-    // ลบสเกเลตันเท่าที่ใส่ไป
     [...grid.querySelectorAll('.skeleton')].slice(0, end-start).forEach(el=>el.remove());
-
     grid.insertAdjacentHTML('beforeend', html);
-    page++;
-    loading = false;
+    page++; loading = false;
   }, 200);
 }
 function applyFilters(){
-  // ยกเลิกงานโหลดค้าง
-  clearTimeout(loadTimer);
-  loadTimer = null;
-  loading   = false;
-
+  clearTimeout(loadTimer); loadTimer = null; loading = false;
   const q = state.q.trim().toLowerCase();
   const terms = q ? q.split(/\s+/).filter(Boolean) : [];
 
-  // ---- คิดคะแนนความเกี่ยวข้องจากคำค้น ----
   const score = (p) => {
     if(!terms.length) return 0;
     const n  = (nameOf(p) || "").toLowerCase();
@@ -670,22 +677,17 @@ function applyFilters(){
     return s;
   };
 
-  // ---- โหมด "คง 9 ใบไว้เสมอ" ----
-  // ถ้าคุณอยากให้กรองเหลือเฉพาะหมวดจริง ๆ ให้ดูคอมเมนต์ด้านล่าง
   const base = PRODUCTS.slice();
-
-  // enrich: ธงว่าเข้าหมวดไหม / hit คำค้นไหม / คะแนน
   const enriched = base.map(p => {
     const hay = (nameOf(p)+' '+descOf(p)+' '+tagsStr(p)).toLowerCase();
     return {
       p,
-      catHit: !!state.cat && p.cat === state.cat,            // เข้าหมวดที่เลือก
-      hit: terms.length ? terms.some(w => hay.includes(w)) : false, // แมตช์คำค้นไหม
-      s: score(p)                                           // คะแนนความเกี่ยวข้อง
+      catHit: !!state.cat && p.cat === state.cat,
+      hit: terms.length ? terms.some(w => hay.includes(w)) : false,
+      s: score(p)
     };
   });
 
-  // เรียง: 1) catHit ก่อน 2) ถ้ามีคำค้น → hit ก่อน 3) คะแนนมากก่อน 4) tie-break ตาม sort
   enriched.sort((A, B) => {
     if (A.catHit !== B.catHit) return (B.catHit?1:0) - (A.catHit?1:0);
     if (terms.length && A.hit !== B.hit) return (B.hit?1:0) - (A.hit?1:0);
@@ -696,12 +698,8 @@ function applyFilters(){
     return A.p.pop - B.p.pop;
   });
 
-  // อัปเดต list + เรนเดอร์
   viewList = enriched.map(x => x.p);
-
-  page = 0;
-  grid.innerHTML = "";
-  updateCount();
+  page = 0; grid.innerHTML = ""; updateCount();
   if(viewList.length === 0){
     emptyEl.textContent = I18N[currentLang].empty;
     emptyEl.style.display = 'block';
@@ -736,22 +734,61 @@ document.addEventListener('click', e=>{
 });
 document.addEventListener('keydown', e=>{ if(e.key==='Escape') closeModal(); });
 
-/* ========== EVENTS + HERO + HEADER ========== */
-const deb = (fn,ms=250)=>{ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a),ms);} };
-$('#q').addEventListener('input', deb(e=>{ state.q=e.target.value; applyFilters(); }, 200));
-$('#cat').addEventListener('change', e=>{ state.cat=e.target.value; applyFilters(); });
-$('#sort').addEventListener('change', e=>{ state.sort=e.target.value; applyFilters(); });
-
+/* ========== HEADER + HERO ========== */
 (function(){
   const header = document.getElementById('siteHeader');
   const setH = () => { const h = header ? Math.round(header.getBoundingClientRect().height) : 64; document.documentElement.style.setProperty('--header-h', h + 'px'); };
   window.addEventListener('load', setH, {once:true}); window.addEventListener('resize', setH); setH();
+
+  const onScroll = () => {
+    const y = window.scrollY || document.documentElement.scrollTop || 0;
+    header && header.classList.toggle('scrolled', y > 10);
+  };
+  window.addEventListener('scroll', onScroll, {passive:true}); onScroll();
+
+  // mobile menu + scrim + body lock
   const toggle = header?.querySelector('.nav-toggle');
-  if(toggle){
-    toggle.addEventListener('click', function(){ const opened = header.classList.toggle('open'); toggle.setAttribute('aria-expanded', String(opened)); });
-    header.querySelectorAll('.menu a').forEach(a => a.addEventListener('click', ()=>{ header.classList.remove('open'); toggle.setAttribute('aria-expanded','false'); }));
+  const nav = document.getElementById('primary-nav');
+  const scrim = document.querySelector('.menu-scrim');
+  if(toggle && nav && scrim){
+    let scrollTopLock = 0;
+    function setMenuOpen(isOpen){
+      header.classList.toggle('open', isOpen);
+      toggle.setAttribute('aria-expanded', String(isOpen));
+      nav.setAttribute('aria-hidden', String(!isOpen));
+      isOpen ? scrim.removeAttribute('hidden') : scrim.setAttribute('hidden','');
+
+      if(isOpen){
+        scrollTopLock = window.scrollY;
+        document.body.classList.add('no-scroll');
+        document.body.style.top = `-${scrollTopLock}px`;
+        const first = nav.querySelector('a,button,[tabindex]:not([tabindex="-1"])');
+        first && first.focus({preventScroll:true});
+      }else{
+        document.body.classList.remove('no-scroll');
+        document.body.style.top = '';
+        window.scrollTo(0, scrollTopLock);
+        toggle.focus({preventScroll:true});
+      }
+    }
+    toggle.addEventListener('click', ()=> setMenuOpen(!header.classList.contains('open')));
+    scrim.addEventListener('click', ()=> setMenuOpen(false));
+    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape' && header.classList.contains('open')) setMenuOpen(false); });
+    window.addEventListener('resize', ()=>{ if (window.innerWidth > 920 && header.classList.contains('open')) setMenuOpen(false); }, {passive:true});
+    header.querySelectorAll('.menu a').forEach(a => a.addEventListener('click', ()=> setMenuOpen(false)));
   }
+
+  // highlight current page
+  try{
+    const here = location.pathname.replace(/\/+$/,'') || '/';
+    document.querySelectorAll('.menu a').forEach(a=>{
+      const path = new URL(a.getAttribute('href'), location.origin).pathname.replace(/\/+$/,'') || '/';
+      if (here === path) a.setAttribute('aria-current','page'); else a.removeAttribute('aria-current');
+    });
+  }catch(e){}
 })();
+
+/* ===== Hero slider ===== */
 (function(){
   const slides = [...document.querySelectorAll('.slide')];
   const dotsWrap = document.querySelector('.dots'); if(slides.length===0 || !dotsWrap) return;
@@ -763,12 +800,12 @@ $('#sort').addEventListener('change', e=>{ state.sort=e.target.value; applyFilte
   const hero = document.querySelector('.hero'); hero.addEventListener('mouseenter', ()=> clearInterval(tmr)); hero.addEventListener('mouseleave', ()=> tmr = setInterval(tick, 5200));
 })();
 
-/* ========== LANGUAGE SWITCH (อัปเดตเมตาด้วย) ========== */
+/* ========== LANGUAGE SWITCH (อัปเดตเมตาด้วย + รีเรนเดอร์การ์ด) ========== */
 function applyLang(lang){
   currentLang = lang;
   document.documentElement.lang = lang;
 
-  document.querySelectorAll('.lang-fab .lang-btn').forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === lang)));
+  document.querySelectorAll('.lang-btn').forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === lang)));
   document.querySelectorAll('[data-i18n-key]').forEach(node => {
     const key = node.getAttribute('data-i18n-key'); const txt = I18N[lang][key]; if(txt) node.textContent = txt;
   });
@@ -791,14 +828,25 @@ function applyLang(lang){
   const sName = document.querySelector('#sort option[value="name"]'); if(sName) sName.textContent = I18N[lang].sort_name;
 
   emptyEl.textContent = I18N[lang].empty;
-  try{ localStorage.setItem('lang', lang); }catch(e){}
 
-  applyFilters(); // re-render การ์ดตามภาษา
+  // recalc header height (ข้อความปุ่มภาษาเปลี่ยน)
+  const header = document.getElementById('siteHeader');
+  const h = header ? Math.round(header.getBoundingClientRect().height) : 64;
+  document.documentElement.style.setProperty('--header-h', h + 'px');
+
+  try{ localStorage.setItem('lang', lang); }catch(e){}
+  applyFilters();
 }
 (function initLang(){
   applyLang(currentLang);
-  document.querySelectorAll('.lang-fab .lang-btn').forEach(btn=> btn.addEventListener('click', ()=> applyLang(btn.dataset.lang)));
+  document.querySelectorAll('.lang-btn').forEach(btn=> btn.addEventListener('click', ()=> applyLang(btn.dataset.lang)));
 })();
+
+/* ========== SEARCH / FILTER EVENTS ========== */
+const deb = (fn,ms=250)=>{ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a),ms);} };
+$('#q').addEventListener('input', deb(e=>{ state.q=e.target.value; applyFilters(); }, 200));
+$('#cat').addEventListener('change', e=>{ state.cat=e.target.value; applyFilters(); });
+$('#sort').addEventListener('change', e=>{ state.sort=e.target.value; applyFilters(); });
 
 /* ========== FIRST RENDER + INFINITE SCROLL ========== */
 const io = new IntersectionObserver(entries=>{
