upload all files

--- a/products.html
+++ b/products.html
@@ -31,7 +31,9 @@
   <!-- Fonts & Perf -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
+  <!-- โหลด 400,600,700,800 ให้ครบ -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;700;800&display=swap" rel="stylesheet">
+
   <link rel="preload" as="image" href="https://i.imgur.com/3xwVLZZ.jpeg">
 
   <!-- JSON-LD: Organization -->
@@ -112,7 +114,7 @@
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
-    body{font-family:'Noto Sans Thai',system-ui,sans-serif;color:var(--ink);background:var(--bg);line-height:1.6;-webkit-font-smoothing:antialiased}
+    body{font-family:'Noto Sans Thai',system-ui,sans-serif;color:var(--ink);background:var(--bg);line-height:1.6}
 
     /* ===== HEADER (Fixed + glass on scroll) ===== */
     .site-header{
