--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -185,10 +185,10 @@
       <div class="header-right">
         <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
           <ul class="menu">
-            <li><a href="/index.html" class="nav-link">Home</a></li>
-            <li><a href="/about-us.html" class="nav-link">About us</a></li>
-            <li><a href="/products.html" class="nav-link">Products</a></li>
-            <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+          <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+          <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+          <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
           </ul>
         </nav>
 
@@ -218,16 +218,6 @@
       </div>
       <h1 data-i18n-key="hero_title">น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating)</h1>
       <p data-i18n-key="hero_tagline">กระบวนการชุบและเคลือบช่วยเพิ่มความทนการกัดกร่อน ความแข็ง ความเงางาม และสมบัติเชิงฟังก์ชันของชิ้นงาน เราพัฒนาสูตรสำหรับซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ พร้อมทีมเทคนิคดูแลไลน์ผลิตของคุณ</p>
-    </div>
-
-    <!-- FAB ภาษา (ซิงก์กับบนเฮดเดอร์) -->
-    <div class="lang-fab" role="group" aria-label="Language switcher">
-      <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
-        <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
-      </button>
-      <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
-        <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
-      </button>
     </div>
   </section>
 
