--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -189,10 +189,10 @@
       <div class="header-right">
         <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
           <ul class="menu">
-            <li><a href="/index.html" class="nav-link">Home</a></li>
-            <li><a href="/about-us.html" class="nav-link">About us</a></li>
-            <li><a href="/products.html" class="nav-link">Products</a></li>
-            <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+            <li><a href="https://www.baumechemical.com/products.html" class="nav-link">Products</a></li>
+            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
           </ul>
         </nav>
 
@@ -218,21 +218,12 @@
   <section class="hero" aria-label="Pretreatment overview">
     <div class="hero-inner">
       <div style="margin-bottom:12px">
-        <a class="home-back" href="/index.html">← <span data-i18n-key="back_home">หน้าแรก</span></a>
+        <a class="home-back" href="https://www.baumechemical.com/index.html">← <span data-i18n-key="back_home">หน้าแรก</span></a>
       </div>
       <h1 data-i18n-key="hero_title">กรด/ด่างล้างไขมัน – อัลตร้าโซนิค Pretreatment</h1>
       <p data-i18n-key="hero_tagline">เลือกสูตรให้เหมาะกับวัสดุและคราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย</p>
     </div>
 
-    <!-- FAB ภาษา (sync กับบนเฮดเดอร์) -->
-    <div class="lang-fab" role="group" aria-label="Language switcher">
-      <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
-        <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
-      </button>
-      <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
-        <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
-      </button>
-    </div>
   </section>
 
   <main class="wrap" role="main">
