--- a/products/index.html
+++ b/products/index.html
@@ -512,7 +512,7 @@
           </article>
           <article class="tcard">
             <div class="tquote">“สูตรไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ ทำให้การบำบัดของเสียง่ายลงและปลอดภัยขึ้น”</div>
-            <div class="tauthor">ลูกค้ากลุ่มอิเล็กทรอนิกส์</div>
+            <div class="tauthor">ลูกค้ากลุ่มเครื่องประดับ</div>
           </article>
         </div>
       </div>
