upload all files

--- a/contact-us.html
+++ b/contact-us.html
@@ -84,11 +84,11 @@
     },
     {
       "@type": "ContactPage",
-      "@id": "https://www.baumechemical.com/contact-us#page",
+      "@id": "https://www.baumechemical.com/contact-us.html#page",
       "name": "ติดต่อเรา | Baume Chemical",
       "url": "https://www.baumechemical.com/contact-us.html",
       "about": { "@id": "https://www.baumechemical.com/#org" },
-      "breadcrumb": { "@id": "https://www.baumechemical.com/contact-us#breadcrumb" },
+      "breadcrumb": { "@id": "https://www.baumechemical.com/contact-us.html#breadcrumb" },
       "primaryImageOfPage": {
         "@type": "ImageObject",
         "url": "https://img5.pic.in.th/file/secure-sv1/V8.jpg",
@@ -100,6 +100,7 @@
   ]
 }
 </script>
+
 
   <style>
     :root{
